<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ivBlack"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivParks"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        app:layout_constraintStart_toEndOf="@+id/cbPark"
        app:layout_constraintTop_toTopOf="@+id/cbPark"
        app:srcCompat="@drawable/park" />

    <ImageView
        android:id="@+id/ivGlades"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintStart_toEndOf="@+id/cbGlades"
        app:layout_constraintTop_toBottomOf="@+id/ivParks"
        app:srcCompat="@drawable/glades" />

    <Switch
        android:id="@+id/swDouble"
        android:layout_width="41dp"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/swBlue" />

    <ImageView
        android:id="@+id/ivMtnLogo"
        android:layout_width="99dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/waterville_cir_logo" />

    <TextView
        android:id="@+id/tvSelectPreferences"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/select_msg"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMtnLogo" />

    <Switch
        android:id="@+id/swGreen"
        android:layout_width="41dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTrailDifficulty" />

    <Switch
        android:id="@+id/swBlack"
        android:layout_width="41dp"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/swGreen"
        app:layout_constraintTop_toBottomOf="@+id/swGreen" />

    <Switch
        android:id="@+id/swBlue"
        android:layout_width="41dp"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/swGreen"
        app:layout_constraintStart_toEndOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/swBlack"
        app:layout_constraintStart_toEndOf="@+id/swBlack"
        app:layout_constraintTop_toTopOf="@+id/swBlack"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/black_diamond2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/swGreen"
        app:layout_constraintStart_toEndOf="@+id/swGreen"
        app:layout_constraintTop_toTopOf="@+id/swGreen"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/green_circle" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/swBlue"
        app:layout_constraintStart_toEndOf="@+id/swBlue"
        app:layout_constraintTop_toTopOf="@+id/swBlue"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/blue_sqaure3" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/swDouble"
        app:layout_constraintStart_toEndOf="@+id/swDouble"
        app:layout_constraintTop_toTopOf="@+id/swDouble"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/double_black_diamond" />

    <CheckBox
        android:id="@+id/cbPark"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/parks_label"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/tvTrailFeatures" />

    <CheckBox
        android:id="@+id/cbGlades"
        android:layout_width="81dp"
        android:layout_height="32dp"
        android:text="@string/glades_label"
        app:layout_constraintStart_toStartOf="@+id/cbPark"
        app:layout_constraintTop_toBottomOf="@+id/cbPark" />

    <CheckBox
        android:id="@+id/cdMoguls"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:text="@string/moguls_label"
        app:layout_constraintStart_toStartOf="@+id/cbGlades"
        app:layout_constraintTop_toBottomOf="@+id/cbGlades" />

    <ImageView
        android:id="@+id/ivMoguls"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintStart_toEndOf="@+id/cdMoguls"
        app:layout_constraintTop_toBottomOf="@+id/ivGlades"
        app:srcCompat="@drawable/moguls" />

    <TextView
        android:id="@+id/tvTrailDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/trail_difficulty_label"
        app:layout_constraintEnd_toStartOf="@+id/tvTrailFeatures"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectPreferences" />

    <TextView
        android:id="@+id/tvTrailFeatures"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/trail_features_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectPreferences" />

    <Button
        android:id="@+id/button2"
        android:layout_width="222dp"
        android:layout_height="46dp"
        android:layout_marginBottom="36dp"
        android:text="@string/find_path"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/tblvResultTable"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow>

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>